config/sandbox-manager/envoy-config.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: sandbox-manager-envoy-config
  namespace: sandbox-system
data:
  envoy.yaml: |
    admin:
      access_log_path: /dev/stdout
      address:
        socket_address:
          protocol: TCP
          address: 127.0.0.1
          port_value: 9901
    static_resources:
      listeners:
        - name: listener_0
          address:
            socket_address:
              address: 0.0.0.0
              port_value: 7788
          filter_chains:
            - filters:
                - name: envoy.filters.network.http_connection_manager
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                    stat_prefix: ingress_http
                    access_log:
                      - name: envoy.access_loggers.file
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                          path: "/dev/stdout"
                          json_format:
                            start_time: "%START_TIME%"
                            method: "%REQ(:METHOD)%"
                            path: "%REQ(:PATH)%"
                            protocol: "%PROTOCOL%"
                            response_code: "%RESPONSE_CODE%"
                            response_flags: "%RESPONSE_FLAGS%"
                            bytes_received: "%BYTES_RECEIVED%"
                            bytes_sent: "%BYTES_SENT%"
                            duration_ms: "%DURATION%"
                            upstream_host: "%UPSTREAM_HOST%"
                            downstream_remote_address: "%DOWNSTREAM_REMOTE_ADDRESS%"
                            user_agent: "%REQ(USER-AGENT)%"
                            request_id: "%REQ(X-REQUEST-ID)%"
                            authority: "%REQ(:AUTHORITY)%"
                            upstream_local_address: "%UPSTREAM_LOCAL_ADDRESS%"
                    route_config:
                      name: local_route
                      virtual_hosts:
                        - name: default
                          domains:
                            - "*"
                          routes:
                            - match:
                                prefix: "/"
                                headers:
                                  - name: x-agents-sandbox-endpoint-route
                                    string_match:
                                      exact: front-http
                              route:
                                cluster: sandbox_front_http
                                timeout: 0s
                              request_headers_to_remove:
                                - x-agents-sandbox-endpoint-route
                                - x-agents-sandbox-endpoint-host
                                - x-agents-sandbox-endpoint-port
                                - x-envoy-original-dst-host
                            - match:
                                prefix: "/"
                                headers:
                                  - name: x-agents-sandbox-endpoint-route
                                    string_match:
                                      exact: front-https
                              route:
                                cluster: sandbox_front_https
                                timeout: 0s
                              request_headers_to_remove:
                                - x-agents-sandbox-endpoint-route
                                - x-agents-sandbox-endpoint-host
                                - x-agents-sandbox-endpoint-port
                                - x-envoy-original-dst-host
                            - match:
                                prefix: "/"
                              route:
                                cluster: sbx_original_dst_cluster
                                timeout: 400s
                              request_headers_to_remove:
                                - x-agents-sandbox-endpoint-route
                                - x-agents-sandbox-endpoint-host
                                - x-agents-sandbox-endpoint-port
                              typed_per_filter_config:
                                envoy.filters.http.dynamic_forward_proxy:
                                  "@type": type.googleapis.com/envoy.config.route.v3.FilterConfig
                                  disabled: true
                    http_filters:
                      - name: envoy.filters.http.ext_proc
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor
                          grpc_service:
                            envoy_grpc:
                              cluster_name: ext_proc_cluster
                          processing_mode:
                            request_header_mode: SEND
                            response_header_mode: SEND
                          mutation_rules:
                            allow_envoy: true
                      - name: envoy.filters.http.set_filter_state
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.set_filter_state.v3.Config
                          on_request_headers:
                            - object_key: envoy.upstream.dynamic_host
                              format_string:
                                text_format_source:
                                  inline_string: "%REQ(x-agents-sandbox-endpoint-host)%"
                            - object_key: envoy.upstream.dynamic_port
                              format_string:
                                text_format_source:
                                  inline_string: "%REQ(x-agents-sandbox-endpoint-port)%"
                      - name: envoy.filters.http.dynamic_forward_proxy
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_forward_proxy.v3.FilterConfig
                          dns_cache_config:
                            name: sandbox_front_dns_cache
                            dns_lookup_family: V4_ONLY
                          allow_dynamic_host_from_filter_state: true
                      - name: envoy.filters.http.router
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                    upgrade_configs:
                      - upgrade_type: websocket
      clusters:
        - name: ext_proc_cluster
          type: STATIC
          connect_timeout: 5s
          http2_protocol_options:
            max_concurrent_streams: 10000
          load_assignment:
            cluster_name: ext_proc_cluster
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: 127.0.0.1
                          port_value: 9002
        - name: sbx_original_dst_cluster
          type: ORIGINAL_DST
          connect_timeout: 90s
          lb_policy: CLUSTER_PROVIDED
          common_http_protocol_options:
            max_requests_per_connection: 1
          original_dst_lb_config:
            use_http_header: true
          circuit_breakers:
            thresholds:
              - priority: DEFAULT
                max_connections: 100000
                max_pending_requests: 50000
                max_requests: 150000
                max_retries: 10
        - name: sandbox_front_http
          lb_policy: CLUSTER_PROVIDED
          connect_timeout: 5s
          typed_extension_protocol_options:
            envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
              "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
              upstream_http_protocol_options:
                auto_sni: true
                auto_san_validation: true
              use_downstream_protocol_config:
                http_protocol_options: {}
                http2_protocol_options: {}
          cluster_type:
            name: envoy.clusters.dynamic_forward_proxy
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.clusters.dynamic_forward_proxy.v3.ClusterConfig
              dns_cache_config:
                name: sandbox_front_dns_cache
                dns_lookup_family: V4_ONLY
        - name: sandbox_front_https
          lb_policy: CLUSTER_PROVIDED
          connect_timeout: 5s
          cluster_type:
            name: envoy.clusters.dynamic_forward_proxy
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.clusters.dynamic_forward_proxy.v3.ClusterConfig
              dns_cache_config:
                name: sandbox_front_dns_cache
                dns_lookup_family: V4_ONLY
          typed_extension_protocol_options:
            envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
              "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
              upstream_http_protocol_options:
                auto_sni: true
                auto_san_validation: true
              auto_config: {}
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
              common_tls_context:
                validation_context:
                  trusted_ca:
                    filename: /etc/ssl/certs/ca-certificates.crt
